@@ -1794,6 +1794,7 @@ a.comment-edit-link {
 	width: 16px;
 	height: 16px;
 	margin: 0 6px;
+	vertical-align: text-bottom;
 }
 
 
